# GRIFDIR

./: .gitignore  CITATION.cff  LICENSE.txt  README.md  config.py  data_utils.py  environment.yml  evaluate.py  model_mesh_utils.py  pyproject.toml  requirements.txt  train.py
checkpoints/gaussian_blob/: config.yaml
checkpoints/multidomain/: config.yaml
checkpoints/pinball/: config.yaml
configs/: gaussian_blob.yaml  multidomain.yaml  pinball.yaml
data_tools/: build_hierarchy.py  create_lshape_dataset.py  create_mesh_dataset.py  download_data.py  gaussian_blob_utils.py  generate_training_data.py  mesh_factory.py
diffusion/: README.md  embedding.py  noise.py  noise_accel.py  precond.py  sde.py
eval/: README.md  gaussian_blob_reconstruction.py  pinball_reconstruction.py  resolution_invariance.py  sampling.py  sensor_sweep.py
figures/: gaussian_blob_reconstruction.py  gaussian_blob_samples.py  mesh_hierarchy.py  pinball_reconstruction.py
meshes/: mesh_hierarchy.pt  mesh_hierarchy_circle.pt  mesh_hierarchy_circle_with_hole.pt  mesh_hierarchy_e_shape.pt  mesh_hierarchy_l_shape.pt  mesh_hierarchy_pinball.pt  mesh_hierarchy_plus.pt  mesh_hierarchy_square_64.pt  mesh_hierarchy_square_with_hole.pt  mesh_hierarchy_x_shape.pt
models/: cnn.py  domain_heads.py  fem_conv.py  fno.py  gaot.py  gnn.py  mp_pde.py  multiscale.py
pde_operators/: poisson.py  sensors.py
tests/: test_fem_basis.py  test_imports.py
